1)create functionality to add comment on each media pic of post. 2) Edit comment 3) Resolved stretching issue of images  on timeline. 4) Add +, follow , sub button below pic. 5) change name Alerte to Notification on Right menu.

--- a/src/app/pages/header/header.component.css
+++ b/src/app/pages/header/header.component.css
@@ -825,7 +825,7 @@ font-size: 22px;
 }
 .skltbs-tab {
   font-size: 16px;
-  padding: 1em 1em;
+  padding: 1em 0.5em;
 }
 ul.tab-nav li {
   display: inline-block;
@@ -913,4 +913,78 @@ ul.tab-nav li {
   height: 295px;
   overflow-x: hidden;
   overflow-y: scroll;
+}
+.btn-group {
+  display: inline-block;
+  width: 100%;
+  margin-top: 10px;
+} 
+.btn-group .add-btn-profile {
+  border-radius: 2px;
+  color: #fff;
+  border: none;
+  font-size: 12px;
+  margin-bottom: 7px;
+  background: #f7e041;
+  color: #000;
+  border: 1px solid #f7e041;
+  padding: 2px 6px 2px 6px;
+transition: all 0.5s;
+}
+.btn-group .add-btn-profile:hover {
+background: none;
+color: #f7e041;
+}
+
+
+
+
+.notification .btn-info {
+  border-radius: 4px;
+  color: #fff;
+  border: none;
+  font-size: 13px;
+  margin-bottom: 7px;
+  background: url(/assets/images/add-user-black.png) #f7e041 no-repeat 0 0;
+  color: #000;
+  border: 1px solid #f7e041;
+  background-position: 10px 7px;
+  padding: 3px 8px 3px 23px;
+  background-size: 23%;
+  background-position: 7px 6px;
+}
+.notification .btn-info:hover {
+  background: url(/assets/images/add-user.png) no-repeat 0 0;
+  color: #fff;
+  background-size: 23%;
+  background-position: 7px 6px;
+}
+.notification .btn-success {
+  border-radius: 4px;
+  color: #fff;
+  border: none;
+  font-size: 13px;
+  margin-bottom: 7px;
+    color: #000;
+    border:1px solid #f7e041;
+    background: url(/assets/images/user.png) #f7e041 no-repeat 0 0;
+    background-position: 10px 7px;
+    padding: 3px 8px 3px 23px;
+    background-size: 16%;
+    background-position: 7px 6px
+}
+.notification .btn-success:hover {
+  color: #fff;
+  background: url(/assets/images/user-white.png) no-repeat 0 0;
+  background-position: 7px 6px;
+  background-size: 16%;
+}
+.demandeami {
+  border-bottom: none;
+}
+.notification {
+  display: inline-block;
+  width: 100%;
+  border-bottom: 1px solid #2E2E2E;
+  margin-bottom: 7px;
 }
